[package]
name = "ctrlv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
rand = "0.8.5"
time = { version = "0.3.41", features = ["serde"] }
tower = "0.4.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.35"
